--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "voxapiclientphp",
+    "name": "mannysoft/voxapiclientphp",
     "type": "library",
     "description": "The Provisioning API enables Voxbone customers to automate the ordering and configuration of phone numbers and channels.n",
     "keywords": ["DID, SIP Trunking, VoIP, SMS"],
