--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "apimatic/unirest-php": "dev-master"
+        "mashape/unirest-php": "dev-master"
     },
     "autoload": {
         "psr-4": {
